very small fix for text alignment on mobile

--- a/static/css/creative.css
+++ b/static/css/creative.css
@@ -168,11 +168,14 @@ li {
 	*/
 	.flex-container .flex-item-text-overlay {
 		position: absolute;
-		width: 100%;
+		margin-left: 5%;
+		margin-right: 5%;
+		width: 90%;
 	}
 	
 	.flex-container .flex-item-text-overlay h4 {
-		margin-top: 30px;	
+		margin-top: 30px;
+		padding: 0px 20px;
 	}
 	
 	/*
